# Elearning-cpp

./: ARCHITECTURE_CORRECTIONS.md  ARCHITECTURE_DIAGRAMS.md  BUILD_SUCCESS.md  CMakeLists.txt  CONSOLE_CLIENT_GUIDE.md  DOCUMENTATION_INDEX.md  FINAL_TECHNICAL_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_ARCHITECTURE.md  REDESIGN_OPTIONS.md  RUN_SERVER.md  STATUS.md  TECHNICAL_DOCUMENTATION.md  TEST_LOGIN.md  build_project.sh  console_client  server  setup_structure.sh  test_message  test_message.cpp  verify_project.sh
config/: client_config.json  server_config.json
docs/: UI_REDESIGN.md  agent-info.md  codeing-task.md  project-structure.md  protocol-design.md  screen-setting.md  sequence-diagrams.md  usecase.md
include/: common.hpp  message_structs.hpp
src/client/: Client.cpp  Client.hpp  ConsoleClient.cpp  ConsoleClient.hpp  UI.cpp  UI.hpp  UI.hpp.NEW  UI_NEW.cpp  console_main.cpp  main.cpp
src/db/: Database.cpp  Database.hpp
src/protocol/: Network.cpp  Network.hpp  Protocol.cpp  Protocol.hpp
src/server/: ClientHandler.cpp  ClientHandler.hpp  Server.cpp  Server.hpp  main.cpp
src/utils/: Logger.cpp  Logger.hpp  Parser.cpp  Parser.hpp
test/: test_message_format.cpp  test_network_connection.cpp
